# aerial-shapes

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
cmake/: imgui.cmake
src/: build.cpp  config.h  main.cpp  match.cpp  precompiled.h  process_images.cpp
src/lib/: bitset-serialise.cpp  bitset-serialise.hpp  detect-edge.cpp  detect-edge.hpp  edged-image.cpp  edged-image.hpp  edit-image-edges.cpp  edit-image-edges.hpp  frame-collection.cpp  frame-collection.hpp  image-list.cpp  image-list.hpp  mat-to-texture.cpp  mat-to-texture.hpp  window.cpp  window.hpp
test/: test.cpp
